Fix icon picker z-index on workspace page #LMR-682

--- a/src/app/workspace/workspace-chooser/resource-chooser/resource-chooser.component.scss
+++ b/src/app/workspace/workspace-chooser/resource-chooser/resource-chooser.component.scss
@@ -108,6 +108,10 @@ $bookmark-border-color: #bdbdbd;
               z-index: $z-index-hovered;
             }
 
+            &.selected-resource {
+              z-index: $z-index-selected;
+            }
+
             .settings {
               position: absolute;
               right: 5px;
